--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 # GNU Health configuration
 
-DB_USER=johndoe
+DB_USER=gnuhealth
 DB_PASS=securepassword123
-DB_NAME=mydb
+DB_NAME=health
 PYTHON_VERSION=3.12.3
